--- a/index.html
+++ b/index.html
@@ -1,6 +1,118 @@
-<html>
-<body>
-<h1>Hello, world!</h1>
-<p>Nothing much to see here, yet.</p>
-</body>
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>PyCruise 2015 - Costs</title>
+
+    <!-- Bootstrap -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body role="document">
+  <!-- <div class="header">
+          <h1 class="text-muted">&#128674;</h1>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <li><a href="/">Home</a></li>
+            <li><a href="/why.html">Why a cruise?</a></li>
+            <li><a href="/costs.html">Costs</a></li>
+            <li><a href="/kids.html">Kids</a></li>
+            <li><a href="/important.html">Important details</a></li>
+            <li><a href="/coc.html">Code of Conduct</a></li>
+            <li><a href="/register.html">Register</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          </ul>
+
+      </div> -->
+
+      <nav class="navbar navbar-inverse">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </li>
+          <a class="navbar-brand" href="#">PyCruise</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/why.html">Cruise 101</a></li>
+            <li><a href="/costs.html">Costs</a></li>
+            <li><a href="/important.html">Important details</a></li>
+            <li><a href="/coc.html">Code of Conduct</a></li>
+            <li><a href="/register.html">Register</a></li>
+            <li><a href="/help.html">Sponser</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+            <!-- <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li> -->
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+    <div class="container col-md-12">
+      <div class="jumbotron">
+        <h1>&#128674;PyCruise 2016!&#128674;</h1>
+        <p class="lead">June 20th - June 26th: Get your cruise on with your fellow Pythonistas! Cabins start at $600 / person.</p>
+        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+      </div>
+
+      <div class="row marketing">
+        <div class="col-md-4 col-md-offset-2">
+          <h4>Food and lodging for one price</h4>
+          <p>For one price, know that you have your room, food, and most entertainment covered! Also, we'll be stopping in some great ports!</p>
+
+          <h4>Family welcome</h4>
+          <p>Bring your loved ones! All-day childcare is free, and there's more than enough to entertain a significant other who doesn't want to geek out.</p>
+
+          <h4>Open space format</h4>
+          <p>Collaborate at sea on your favorite projects, or get into something new.</p>
+        </div>
+
+
+        <div class="col-md-4">
+          <h4>Pay over time</h4>
+          <p>$200 / person will hold your reservation, allowing you to pay for the cruise over time.</p>
+
+          <h4>A wide range of rooms available</h4>
+          <p>Want an economic interior room? We have them! Want a private balcony? We have that, too!</p>
+
+          <h4>Excellent ports with lots to do!</h4>
+          <p>Ports include New York City, St. John's, and Halifax. Excursions can be planned in advance, and there might even be some conference exclusive ones!</p>
+        </div>
+      </div>
+
+<footer class="footer">
+        <p>Follow us at <a href="https://twitter.com/pycruise/">@PyCruise</a>
+      </footer>
+      
+
+    </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="/static/js/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="/static/js/bootstrap.min.js"></script>
+  </body>
 </html>
