--- a/coc.html
+++ b/coc.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -71,36 +70,31 @@
       </div>
     </nav>
     <div class="container col-md-12">
-      <div class="jumbotron">
-        <h1>&#128674;PyCruise 2016!&#128674;</h1>
-        <p class="lead">June 20th - June 26th: Get your cruise on with your fellow Pythonistas! Cabins start at $600 / person.</p>
-        <p><a class="btn btn-lg btn-success" href="/pycruise/register.html" role="button">Sign up today</a></p>
-      </div>
+      <div class="box-content">
+      <h1>Code of Conduct</h1>
+    <p>PyCruise is a community conference intended for networking and collaboration in the developer community. While it is a more casual conference, all attendees are expected to follow the Code of Conduct.</p>
+<p>We value the participation of each member of the Python community and want all attendees to have an enjoyable and fulfilling experience. Accordingly, all attendees are expected to show respect and courtesy to other attendees throughout the conference and at all conference events, whether officially sponsored by PyCon or not.</p>
+<p>To make clear what is expected, all delegates/attendees, speakers, exhibitors, organizers and volunteers at any PyCon event are required to conform to the following Code of Conduct. Organizers will enforce this code throughout the event.</p>
+<h2>The Short Version</h2>
+<p>PyCruise is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, sexual orientation, disability, physical appearance, body size, race, or religion. We do not tolerate harassment of conference participants in any form.</p>
+<p>All communication should be appropriate for a professional audience including people of many different backgrounds. Sexual language and imagery is not appropriate for any conference venue, including Open Spaces and conference excursions.</p>
+<p>Be kind to others. Do not insult or put down other attendees. Behave professionally. Remember that harassment and sexist, racist, or exclusionary jokes are not appropriate for PyCruise.</p>
+<p>Attendees violating these rules may be barred from all PyCruise events. Serious transgressions will be handed over to the security team aboard the ship.</p>
+<p>Thank you for helping make this a welcoming, friendly event for all.</p>
+<h2>The Longer Version</h2>
+<p>Harassment includes offensive verbal comments related to gender, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.</p>
+<p>Participants asked to stop any harassing behavior are expected to comply immediately.</p>
+<p>Be careful in the words that you choose. Remember that sexist, racist, and other exclusionary jokes can be offensive to those around you. Excessive swearing and offensive jokes are not appropriate for PyCruise.</p>
+<p>If a participant engages in behavior that violates this code of conduct, the conference organizers may take any action they deem appropriate, including warning the offender, expulsion from the conference events, or reporting the offender to ship security.</p>
+<h2>Contact Information</h2>
+<p>Because we will be on a ship, communication will not be thorugh cell phones. At the moment, reporting procedures are being researched. Our goal is to have a robust set of procedures in place so that contacting staff is as easy as possible.</p>
+<p>Conference staff will be happy to help participants contact ship security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.</p>
+<h2>Procedure for Handling Harassment</h2>
+<p>The procedure for handling harassment is still under review, and will be posted by January 1, 2016.</p>
+<h2>License</h2>
+<p>This Code of Conduct was forked from the PyCon 2013 policy.</p>
 
-      <div class="row marketing">
-        <div class="col-md-4 col-md-offset-2">
-          <h4>Food and lodging for one price</h4>
-          <p>For one price, know that you have your room, food, and most entertainment covered! Also, we'll be stopping in some great ports!</p>
-
-          <h4>Family welcome</h4>
-          <p>Bring your loved ones! All-day childcare is free, and there's more than enough to entertain a significant other who doesn't want to geek out.</p>
-
-          <h4>Open space format</h4>
-          <p>Collaborate at sea on your favorite projects, or get into something new.</p>
-        </div>
-
-
-        <div class="col-md-4">
-          <h4>Pay over time</h4>
-          <p>$200 / person will hold your reservation, allowing you to pay for the cruise over time.</p>
-
-          <h4>A wide range of rooms available</h4>
-          <p>Want an economic interior room? We have them! Want a private balcony? We have that, too!</p>
-
-          <h4>Excellent ports with lots to do!</h4>
-          <p>Ports include New York City, St. John's, and Halifax. Excursions can be planned in advance, and there might even be some conference exclusive ones!</p>
-        </div>
-      </div>
+                        </div>
 
 <footer class="footer">
         <p>Follow us at <a href="https://twitter.com/pycruise/">@PyCruise</a>
